force-app/main/default/objects/HP_Formulaire__c/HP_Formulaire__c.object-meta.xml
<CustomObject>
    <label>Formulaire</label>
    <nameField>
        <displayFormat>FORM-{000000}</displayFormat>
        <label>HP Formulaire Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Formulaires</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>