force-app/main/default/objects/HP_Formulaire__c/fields/HP_Canal__c.field-meta.xml
<CustomField>
    <fullName>HP_Canal__c</fullName>
    <label>Canal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Digital</fullName>
            </value>
            <value>
                <fullName>MKTC</fullName>
            </value>
            <value>
                <fullName>Mediatech</fullName>
            </value>
            <value>
                <fullName>Spread</fullName>
            </value>
            <value>
                <fullName>Espace Client</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>