force-app/main/default/objects/HP_Formulaire__c/fields/HP_DateHeure__c.field-meta.xml
<CustomField>
    <fullName>HP_DateHeure__c</fullName>
    <label>Date/heure</label>
    <type>DateTime</type>
</CustomField>