force-app/main/default/objects/HP_Formulaire__c/fields/HP_LabelQ12__c.field-meta.xml
<CustomField>
    <fullName>HP_LabelQ12__c</fullName>
    <label>LabelQ12</label>
    <length>255</length>
    <type>Text</type>
</CustomField>