force-app/main/default/objects/HP_Formulaire__c/fields/HP_NomDuFormulaire__c.field-meta.xml
<CustomField>
    <fullName>HP_NomDuFormulaire__c</fullName>
    <label>Nom du formulaire</label>
    <length>255</length>
    <type>Text</type>
</CustomField>