force-app/main/default/objects/HP_Formulaire__c/fields/HP_ValeurQ11__c.field-meta.xml
<CustomField>
    <fullName>HP_ValeurQ11__c</fullName>
    <label>ValeurQ11</label>
    <length>255</length>
    <type>Text</type>
</CustomField>